# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.425 2005/12/05 18:13:12 rocket Exp $

  05 Dec 2005; Eric Edgar <rocket@gentoo.org> catalyst, files/catalyst.1,
  modules/catalyst_support.py, modules/generic_stage_target.py,
  modules/grp_target.py, modules/livecd_stage1_target.py,
  modules/livecd_stage2_target.py, modules/netboot_target.py,
  modules/snapshot_target.py, modules/tinderbox_target.py:
  Stop reading env from the OS. Rely on the more on the envscript for oddball
  settings. Change -v to verbose and -V to version

  04 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  This is 2.0_rc5.

  04 Dec 2005; Eric Edgar <rocket@gentoo.org> modules/stage1_target.py:
  Fix stage1 to NOT contain the code from stage2;continued cleanup from the
  space fix issue

  02 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  examples/generic_stage_template.spec:
  Added chost/cflags/cxxflags/ldflags to example spec template.

  02 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/rc-update.sh:
  OK, just kidding on that last commit. We were already doing rc-update add
  xdm default in livecdfs-update.sh and since it is a livecd-only function,
  there's no point in having it in rc-update.sh

  02 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/rc-update.sh:
  Have rc-update add xdm if livecd/xdm is set.

  02 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/catalyst_lock.py, modules/catalyst_support.py,
  modules/embedded_target.py, modules/generic_stage_target.py,
  modules/grp_target.py, modules/livecd_stage1_target.py,
  modules/livecd_stage2_target.py, modules/netboot_target.py,
  modules/stage1_target.py, modules/stage4_target.py,
  modules/tinderbox_target.py:
  So I was just kidding on that last commit.  This one is 2.0_rc4.

  02 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,