@@ -1,5 +1,9 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.425 2005/12/05 18:13:12 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.426 2005/12/05 19:24:48 rocket Exp $
+
+  05 Dec 2005; Eric Edgar <rocket@gentoo.org>
+  modules/generic_stage_target.py:
+  Fixes for env
 
   05 Dec 2005; Eric Edgar <rocket@gentoo.org> catalyst, files/catalyst.1,
   modules/catalyst_support.py, modules/generic_stage_target.py,
